Backend/applications/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: budget-tracker
  labels:
    istio-injection: enabled
