Backend/applications/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: budget-tracker
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
