Backend/applications/k8s/deployment.yaml
# application/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
  labels:
    app: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
        # This injects the Istio Envoy sidecar
        sidecar.istio.io/inject: "true" 
    spec:
      containers:
      - name: my-app-container
        # GitHub Actions will replace this placeholder with the real image tag
        image: BACKEND_IMAGE_PLACEHOLDER
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  selector:
    app: my-app
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
