Backend/applications/k8s/monitoring-virtual-service.yaml
#Grafana — grafana.PhongKieuTele.id.vn
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: monitoring
spec:
  hosts:
    - "grafana.PhongKieuTele.id.vn"
  gateways:
    - budget-tracker/budget-gateway
  http:
    - route:
        - destination:
            host: grafana-service.monitoring.svc.cluster.local
            port:
              number: 3000

---
#Prometheus — prometheus.PhongKieuTele.id.vn
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: monitoring
spec:
  hosts:
    - "prometheus.PhongKieuTele.id.vn"
  gateways:
    - budget-tracker/budget-gateway
  http:
    - route:
        - destination:
            host: prometheus-service.monitoring.svc.cluster.local
            port:
              number: 9090

---
#Splunk — splunk.PhongKieuTele.id.vn
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: splunk-vs
  namespace: monitoring
spec:
  hosts:
    - "splunk.PhongKieuTele.id.vn"
  gateways:
    - budget-tracker/budget-gateway
  http:
    - route:
        - destination:
            host: splunk-service.monitoring.svc.cluster.local
            port:
              number: 8000
