Backend/applications/k8s/virtual-service.yaml

#Main app — PhongKieuTele.id.vn
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: budget-app-vs
  namespace: budget-tracker
spec:
  hosts:
    - "PhongKieuTele.id.vn"
    - "www.PhongKieuTele.id.vn"
  gateways:
    - budget-gateway
  http:
    # All routes go to frontend
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend
            port:
              number: 80

---
#API — api.PhongKieuTele.id.vn 
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: budget-api-vs
  namespace: budget-tracker
spec:
  hosts:
    - "api.PhongKieuTele.id.vn"
  gateways:
    - budget-gateway
  http:
    - route:
        - destination:
            host: backend
            port:
              number: 80
      timeout: 30s
      retries:
        attempts: 3
        perTryTimeout: 10s
        retryOn: "5xx,reset,connect-failure"
